--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/vite-cloudflare-pages": "^0.4.0",
     "@hono/vite-dev-server": "^0.12.1",
+    "@hono/vite-ssg": "^0.1.0",
     "vite": "^5.2.12",
     "wrangler": "^3.57.2"
   },
