--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "private": true,
   "dependencies": {
+    "@mdx-js/rollup": "^3.0.1",
     "hono": "^4.4.6",
-    "honox": "^0.1.21"
+    "honox": "^0.1.21",
+    "remark-frontmatter": "^5.0.0",
+    "remark-mdx-frontmatter": "^4.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
