--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@hono/react-renderer": "^0.2.0",
     "@mdx-js/rollup": "^3.0.1",
     "hono": "^4.4.6",
     "honox": "^0.1.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0"
   },
@@ -19,7 +22,8 @@
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/vite-cloudflare-pages": "^0.4.0",
     "@hono/vite-dev-server": "^0.12.1",
-    "@hono/vite-ssg": "^0.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "vite": "^5.2.12",
     "wrangler": "^3.57.2"
   },
