--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hono/react-renderer": "^0.2.0",
     "@mdx-js/rollup": "^3.0.1",
+    "@yamada-ui/react": "^1.4.4",
     "hono": "^4.4.6",
     "honox": "^0.1.21",
     "react": "^18.3.1",
