--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@hono/vite-dev-server": "^0.12.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "better-sqlite3": "^11.1.2",
+    "drizzle-kit": "^0.23.0",
+    "drizzle-orm": "^0.32.1",
     "vite": "^5.2.12",
-    "wrangler": "^3.57.2"
+    "wrangler": "^3.67.1"
   },
   "packageManager": "yarn@4.3.0"
 }
