--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "vite": "^5.2.12",
     "wrangler": "^3.67.1"
   },
+  "overrides": {
+    "rollup": "npm:@rollup/wasm-node"
+  },
   "packageManager": "yarn@4.3.0"
 }
