--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "better-sqlite3": "^11.1.2",
     "drizzle-kit": "^0.23.0",
     "drizzle-orm": "^0.32.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.2.12",
     "wrangler": "^3.67.1"
   },
