--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   "overrides": {
     "rollup": "npm:@rollup/wasm-node"
   },
-  "packageManager": "yarn@4.3.0"
+  "volta": {
+    "node": "22.6.0",
+    "yarn": "4.4.0"
+  }
 }
