--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
   },
   "private": true,
   "dependencies": {
-    "@hono/react-renderer": "^0.2.0",
+    "@hono/oauth-providers": "^0.6.1",
+    "@hono/react-renderer": "^0.2.1",
     "@mdx-js/rollup": "^3.0.1",
-    "@yamada-ui/react": "^1.4.7",
-    "hono": "^4.4.6",
-    "honox": "^0.1.21",
+    "@yamada-ui/react": "^1.5.1",
+    "hono": "^4.6.2",
+    "honox": "^0.1.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-mdx-frontmatter": "^4.0.0"
+    "remark-mdx-frontmatter": "^5.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240529.0",
-    "@hono/vite-cloudflare-pages": "^0.4.0",
-    "@hono/vite-dev-server": "^0.12.1",
-    "@types/react": "^18.3.3",
+    "@cloudflare/workers-types": "^4.20240919.0",
+    "@hono/vite-cloudflare-pages": "^0.4.2",
+    "@hono/vite-dev-server": "^0.16.0",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "better-sqlite3": "^11.1.2",
-    "drizzle-kit": "^0.23.0",
-    "drizzle-orm": "^0.32.1",
+    "better-sqlite3": "^11.3.0",
+    "drizzle-kit": "^0.24.2",
+    "drizzle-orm": "^0.33.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.2.12",
-    "wrangler": "^3.67.1"
+    "vite": "^5.4.6",
+    "wrangler": "^3.78.6"
   },
   "overrides": {
     "rollup": "npm:@rollup/wasm-node"
